[package]
name = "hn-index"
version = "0.1.0"
authors = ["python273 <iam@python273.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true

[dependencies]
crossbeam = "0.8"
simdutf8 = { version = "0.1.1" }
regex = "1.5"
